# ammolite

./: .gitignore  Cargo.toml  LICENSE  README.md
ammolite-math/: Cargo.toml
ammolite-math/src/: lib.rs  macros.rs  matrix.rs  ops.rs  vector.rs
src/: buffer.rs  camera.rs  lib.rs  main.rs  pipeline.rs  sampler.rs  shaders.rs  swapchain.rs  vertex.rs
src/iter/: mod.rs
src/math/: macros.rs  matrix.rs  mod.rs  vector.rs
src/model/: error.rs  import.rs  mod.rs  resource.rs
src/shaders/: gltf.frag  gltf.vert  gltf_blend_finalize.frag  gltf_blend_preprocess.frag  gltf_common.frag  gltf_common.h  gltf_common_inputs.frag  gltf_common_uniforms.h  gltf_mask.frag  gltf_opaque.frag  main.frag  main.vert
