[package]
name = "ammolite"
version = "0.1.0"
authors = ["Jakub HlusiÄka <limeth@protonmail.com>"]
edition = "2018"

[dependencies]
# vulkano = "0.11.1"
# vulkano-shaders = "0.11.0"
# vulkano-win = "0.11.0"
arr_macro = "0.1.1"
arrayvec = "0.4.10"
boolinator = "2.4.0"
byteorder = "1.2.4"
det = "0.1.0"
failure = "0.1.2"
fnv = "1.0.6"
generic-array = "0.12.0"
gltf = "0.11.2"
image = "0.19.0"
mikktspace = "0.1.1"
rayon = "1.0.2"
safe-transmute = "0.10.1"
tyenum = "0.1.0"
typenum = "1.10.0"
vulkano = { path = "../vulkano/vulkano" }
vulkano-shaders = { path = "../vulkano/vulkano-shaders" }
vulkano-win = { path = "../vulkano/vulkano-win" }
weak-table = "0.2.3"
winit = "0.19.0"
