[package]
name = "ammolite"
version = "0.1.0"
authors = ["Jakub HlusiÄka <limeth@protonmail.com>"]
edition = "2018"

[dependencies]
ammolite-math = { path = "ammolite-math", default-features = false }
# vulkano = "0.11.1"
# vulkano-shaders = "0.11.0"
# vulkano-win = "0.11.0"
arr_macro = "0.1.1"
arrayvec = "0.4.10"
boolinator = "2.4.0"
byteorder = "1.2.4"
det = "0.1.0"
failure = "0.1.2"
fnv = "1.0.6"
generic-array = "0.12.0"
gltf = "0.14.0"
image = "0.19.0"
mikktspace = "0.1.1"
# openxr = { version = "0.7.0", features = ["static"] }
openxr = { path = "../openxrs/openxr", features = ["static"] }
rayon = "1.0.2"
safe-transmute = "0.10.1"
tyenum = "0.1.0"
typenum = "1.11.0"
vulkano = { path = "../vulkano/vulkano" }
vulkano-shaders = { path = "../vulkano/vulkano-shaders" }
vulkano-win = { path = "../vulkano/vulkano-win" }
weak-table = "0.2.3"
# winit = "0.22.0"
winit = { git = "https://github.com/rust-windowing/winit.git" }
paste = "0.1"
smallvec = "0.6.10"
itertools = "0.8.1"
